# invoice-ai-reader

./: .gitignore  README.md  database.py  main.py  pyproject.toml
src/: app.py  config.py  database.py  extractor.py
