[project]
name = "invoice-ai-reader"
version = "0.1.0"
description = "Automated invoice data extraction using Google Gemini API and Streamlit"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-genai>=1.67.0",
    "python-dotenv>=1.2.2",
    "streamlit>=1.55.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
